--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -1,25 +1,26 @@
-<ng-container *ngIf="user$ | async as _user">
+<!--<ng-container *ngIf="user$ | async as _user">-->
   <div class="menu-item px-3">
     <div class="menu-content d-flex align-items-center px-3">
       <div class="symbol symbol-50px me-5">
-        <img alt="Logo" [src]="_user.pic" />
+        <img alt="Logo" src="./assets/media/avatars/300-1.jpg" />
+        <!--<img alt="Logo" [src]="_user.pic" />-->
       </div>
 
       <div class="d-flex flex-column">
         <div class="fw-bolder d-flex align-items-center fs-5">
-          {{ _user.firstname }} {{ _user.lastname }}
-          <span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2"
+          {{ _user.nombre }}
+          <!--<span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2"
             >Pro</span
-          >
+          >-->
         </div>
         <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer">
-          {{ _user.email }}
+          {{ _user.correo_login }}
         </a>
       </div>
     </div>
   </div>
 
-  <div class="separator my-2"></div>
+  <!--<div class="separator my-2"></div>
 
   <div class="menu-item px-5">
     <a routerLink="/crafted/pages/profile" class="menu-link px-5">
@@ -153,9 +154,9 @@
     <a routerLink="/crafted/account/settings" class="menu-link px-5">
       Account Settings
     </a>
-  </div>
+  </div>-->
 
   <div class="menu-item px-5">
     <a (click)="logout()" class="menu-link px-5 cursor-pointer"> Sign Out </a>
   </div>
-</ng-container>
+<!--</ng-container>-->
