--- a/src/app/pages/users/account/settings/forms/sign-in-method/sign-in-method.component.html
+++ b/src/app/pages/users/account/settings/forms/sign-in-method/sign-in-method.component.html
@@ -15,7 +15,7 @@
         <div class="d-flex flex-wrap align-items-center">
           <div id="kt_signin_email" class="false">
             <div class="fs-6 fw-bolder mb-1">Correo Electrónico</div>
-            <div class="fw-bold text-gray-600">support@keenthemes.com</div>
+            <div class="fw-bold text-gray-600" *ngIf="user">{{user.user.correo_login}}</div>
           </div>
           <div id="kt_signin_email_edit" class="flex-row-fluid d-none">
             <form id="kt_signin_change_email" class="form" novalidate="">
@@ -87,10 +87,10 @@
         <div class="d-flex flex-wrap align-items-center">
           <div id="kt_signin_email" class="d-none">
             <div class="fs-6 fw-bolder mb-1">Correo Electrónico</div>
-            <div class="fw-bold text-gray-600">support@keenthemes.com</div>
+            <div class="fw-bold text-gray-600" *ngIf="user">{{user.user.correo_login}}</div>
           </div>
           <div id="kt_signin_email_edit" class="flex-row-fluid false">
-            <form id="kt_signin_change_email" class="form" novalidate="">
+            <form id="kt_signin_change_email" class="form" novalidate="" [formGroup]="loginForm">
               <div class="row mb-6">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                   <div class="fv-row mb-0">
@@ -102,9 +102,9 @@
                       type="email"
                       class="form-control form-control-lg form-control-solid"
                       id="emailaddress"
-                      placeholder="Correo Electrónico"
-                      name="newEmail"
-                      value="support@keenthemes.com"
+                      matInput
+                      [placeholder]="'Correo Electrónico'"
+                      [formControlName]="'correo_login'"
                     />
                   </div>
                 </div>
@@ -167,7 +167,7 @@
           <div id="kt_signin_password_edit" class="flex-row-fluid false">
             <form id="kt_signin_change_password" class="form" novalidate="">
               <div class="row mb-1">
-                <div class="col-lg-4">
+                <!--<div class="col-lg-4">
                   <div class="fv-row mb-0">
                     <label
                       for="currentpassword"
@@ -181,7 +181,7 @@
                       value="1234"
                     />
                   </div>
-                </div>
+                </div>-->
                 <div class="col-lg-4">
                   <div class="fv-row mb-0">
                     <label
