--- a/src/app/pages/users/account/settings/settings.component.html
+++ b/src/app/pages/users/account/settings/settings.component.html
@@ -1,2 +1,2 @@
 <app-profile-details></app-profile-details>
-<app-sign-in-method></app-sign-in-method>
+<!--<app-sign-in-method></app-sign-in-method>-->
