--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -161,3 +161,9 @@
   .quitar-maximo:hover{
     background-color: rgb(255, 7, 7);
   }
+
+  canvas {
+    position: absolute;
+    /*background-color:#000;
+    border: 2px solid green;*/
+  }
