--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -23,7 +23,7 @@
   <!--end::Content-->
 
   <!-- begin::Footer -->
-  <div class="d-flex flex-center flex-column-auto p-10">
+  <!--<div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
       <a class="text-muted text-hover-primary px-2 cursor-pointer">About</a
       ><a class="text-muted text-hover-primary px-2 cursor-pointer">Contact</a
@@ -31,6 +31,6 @@
         >Contact Us</a
       >
     </div>
-  </div>
+  </div>-->
   <!-- end::Footer -->
 </div>
