--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -8,14 +8,14 @@
 >
   <!--begin::Heading-->
   <div class="text-center mb-10">
-    <h1 class="text-dark mb-3">Sign In to Metronic</h1>
+    <h1 class="text-dark mb-3">Ingresar en Mbipi</h1>
     <div class="text-gray-400 fw-bold fs-4">
-      New Here?
+      ¿Eres Nuevo?
       <a
         routerLink="/auth/registration"
         id="kt_login_signup"
         class="link-primary fw-bolder"
-        >{{ "AUTH.GENERAL.SIGNUP_BUTTON" | translate }}</a
+        >Registrarse</a
       >
     </div>
   </div>
@@ -25,8 +25,8 @@
   <ng-container *ngIf="!hasError">
     <div class="mb-10 bg-light-info p-8 rounded">
       <div class="text-info">
-        Use account <strong>{{ defaultAuth.email }}</strong> and password
-        <strong>{{ defaultAuth.password }}</strong> to continue.
+        Usar cuenta demo <strong>{{ defaultAuth.email }}</strong> y clave
+        <strong>{{ defaultAuth.password }}</strong> para continuar.
       </div>
     </div>
   </ng-container>
@@ -36,7 +36,7 @@
   <ng-container *ngIf="hasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        The login details are incorrect
+        Los datos de acceso son incorrectos
       </div>
     </div>
   </ng-container>
@@ -44,11 +44,12 @@
 
   <!--begin::Form group-->
   <div class="fv-row mb-10">
-    <label class="form-label fs-6 fw-bolder text-dark">Email</label>
+    <label class="form-label fs-6 fw-bolder text-dark">Correo Electrónico</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="email"
       name="email"
+      placeholder="Correo Electrónico"
       formControlName="email"
       autocomplete="off"
       [ngClass]="{
@@ -60,7 +61,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Email is required',
+        message: 'Correo es requerido',
         control: loginForm.controls['email']
       }"
     ></ng-container>
@@ -68,7 +69,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'email',
-        message: 'Email is invalid',
+        message: 'Correo es invalido',
         control: loginForm.controls['email']
       }"
     ></ng-container>
@@ -76,7 +77,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minLength',
-        message: 'Email should have at least 3 symbols',
+        message: 'El correo electrónico debe tener al menos 3 símbolos',
         control: loginForm.controls['email']
       }"
     ></ng-container>
@@ -84,7 +85,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Email should have maximum 360 symbols',
+        message: 'El correo electrónico debe tener un máximo de 360 ​​símbolos',
         control: loginForm.controls['email']
       }"
     ></ng-container>
@@ -95,14 +96,14 @@
   <div class="fv-row mb-10">
     <div class="d-flex justify-content-between mt-n5">
       <div class="d-flex flex-stack mb-2">
-        <label class="form-label fw-bolder text-dark fs-6 mb-0">Password</label>
+        <label class="form-label fw-bolder text-dark fs-6 mb-0">Contraseña</label>
         <a
           routerLink="/auth/forgot-password"
           class="link-primary fs-6 fw-bolder"
           id="kt_login_forgot"
           [style.margin-left]="'5px'"
         >
-          Forgot Password ?
+        ¿Has olvidado tu contraseña?
         </a>
       </div>
     </div>
@@ -111,6 +112,7 @@
       class="form-control form-control-lg form-control-solid"
       type="password"
       name="password"
+      placeholder="Contraseña"
       autocomplete="off"
       formControlName="password"
       [ngClass]="{
@@ -122,7 +124,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Password is required',
+        message: 'Contraseña es requerida',
         control: loginForm.controls['password']
       }"
     ></ng-container>
@@ -130,7 +132,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minlength',
-        message: 'Password should have at least 3 symbols',
+        message: 'La contraseña debe tener al menos 3 símbolos',
         control: loginForm.controls['password']
       }"
     ></ng-container>
@@ -138,7 +140,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Password should have maximum 100 symbols',
+        message: 'La contraseña debe tener un máximo de 100 símbolos',
         control: loginForm.controls['password']
       }"
     ></ng-container>
@@ -155,22 +157,22 @@
     >
       <ng-container *ngIf="isLoading$ | async">
         <span class="indicator-progress" [style.display]="'block'">
-          Please wait...
+          Por favor espere...
           <span
             class="spinner-border spinner-border-sm align-middle ms-2"
           ></span>
         </span>
       </ng-container>
       <ng-container *ngIf="!(isLoading$ | async)">
-        <span class="indicator-label">Continue</span>
+        <span class="indicator-label">Continuar</span>
       </ng-container>
     </button>
 
     <!-- begin::Separator  -->
-    <div class="text-center text-muted text-uppercase fw-bolder mb-5">or</div>
+    <!--<div class="text-center text-muted text-uppercase fw-bolder mb-5">or</div>-->
     <!-- end::Separator  -->
 
-    <a
+    <!--<a
       class="
         btn btn-flex
         flex-center
@@ -186,7 +188,7 @@
       />
 
       Continue with Google
-    </a>
+    </a>-->
   </div>
   <!--end::Action-->
 </form>
