--- a/src/app/modules/auth/components/registration/registration.component.html
+++ b/src/app/modules/auth/components/registration/registration.component.html
@@ -7,20 +7,21 @@
 >
   <!--begin::Heading-->
   <div class="mb-10 text-center">
-    <h1 class="text-dark mb-3">Create an Account</h1>
+    <h1 class="text-dark mb-3">Crear una cuenta</h1>
     <div class="text-gray-400 fw-bold fs-4">
-      Already have an account?
+      Ya tienes una cuenta?
       <a
         routerLink="/auth/login"
         class="link-primary fw-bolder"
+        [style.cursor]="'pointer'"
         [style.margin-left]="'5px'"
-        >Sign in?</a
+        >Inicia Sesión</a
       >
     </div>
   </div>
   <!--end::Heading-->
 
-  <button type="button" class="btn btn-light-primary fw-bolder w-100 mb-10">
+  <!--<button type="button" class="btn btn-light-primary fw-bolder w-100 mb-10">
     <img
       alt="Logo"
       src="./assets/media/svg/brand-logos/google-icon.svg"
@@ -32,55 +33,55 @@
     <div class="border-bottom border-gray-300 mw-50 w-100"></div>
     <span class="fw-bold text-gray-400 fs-7 mx-2">OR</span>
     <div class="border-bottom border-gray-300 mw-50 w-100"></div>
-  </div>
+  </div>-->
 
   <!-- begin::Alert error-->
   <ng-container *ngIf="hasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        The registration details are incorrect
+        Los detalles de registro son incorrectos
       </div>
     </div>
   </ng-container>
   <!-- end::Alert error-->
 
   <!--begin::Form group-->
-  <div class="row fv-row mb-7">
-    <label class="form-label fw-bolder text-dark fs-6">Fullname</label>
+  <div class="fv-row mb-7">
+    <label class="form-label fw-bolder text-dark fs-6">Nombre</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="text"
-      name="fullname"
-      formControlName="fullname"
-      placeholder="Fullname"
+      name="nombre"
+      formControlName="nombre"
+      placeholder="Nombre"
       autocomplete="off"
       [ngClass]="{
-        'is-invalid': registrationForm.controls['fullname'].invalid,
-        'is-valid': registrationForm.controls['fullname'].valid
+        'is-invalid': registrationForm.controls['nombre'].invalid,
+        'is-valid': registrationForm.controls['nombre'].valid
       }"
     />
     <ng-container
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Fullname is required',
-        control: registrationForm.controls['fullname']
+        message: 'Nombre es requerido',
+        control: registrationForm.controls['nombre']
       }"
     ></ng-container>
     <ng-container
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minlength',
-        message: 'Fullname should have at least 3 symbols',
-        control: registrationForm.controls['fullname']
+        message: 'Nombre debe tener al menos 3 simbolos',
+        control: registrationForm.controls['nombre']
       }"
     ></ng-container>
     <ng-container
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Fullname should have maximum 100 symbols',
-        control: registrationForm.controls['fullname']
+        message: 'Nombre solo puede tener maximo 100 simbolos',
+        control: registrationForm.controls['nombre']
       }"
     ></ng-container>
   </div>
@@ -88,11 +89,11 @@
 
   <!--begin::Form group-->
   <div class="fv-row mb-7">
-    <label class="form-label fw-bolder text-dark fs-6">Email</label>
+    <label class="form-label fw-bolder text-dark fs-6">Correo Electrónico</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="email"
-      placeholder="Email"
+      placeholder="Correo Electrónico"
       name="email"
       formControlName="email"
       autocomplete="off"
@@ -105,7 +106,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Email is required',
+        message: 'Correo es requerido',
         control: registrationForm.controls['email']
       }"
     ></ng-container>
@@ -113,7 +114,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'email',
-        message: 'Email is invalid',
+        message: 'Correo es invalido',
         control: registrationForm.controls['email']
       }"
     ></ng-container>
@@ -121,7 +122,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minlength',
-        message: 'Email should have at least 3 symbols',
+        message: 'Correo debe tener al menos 3 simbolos',
         control: registrationForm.controls['email']
       }"
     ></ng-container>
@@ -129,7 +130,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Email should have maximum 360 symbols',
+        message: 'Correo debe tener como maximo 360 simbolos',
         control: registrationForm.controls['email']
       }"
     ></ng-container>
@@ -138,11 +139,11 @@
 
   <!--begin::Form group-->
   <div class="mb-10 fv-row">
-    <label class="form-label fw-bolder text-dark fs-6">Password</label>
+    <label class="form-label fw-bolder text-dark fs-6">Contraseña</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="password"
-      placeholder="Password"
+      placeholder="Contraseña"
       name="password"
       formControlName="password"
       autocomplete="off"
@@ -155,7 +156,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Password is required',
+        message: 'Contraseña es requerida',
         control: registrationForm.controls['password']
       }"
     ></ng-container>
@@ -163,7 +164,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minlength',
-        message: 'Password should have at least 3 symbols',
+        message: 'Contraseña debe tener al menos 3 simbolos',
         control: registrationForm.controls['password']
       }"
     ></ng-container>
@@ -171,7 +172,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Password should have maximum 100 symbols',
+        message: 'Contraseña debe tener como maximo 100 simbolos',
         control: registrationForm.controls['password']
       }"
     ></ng-container>
@@ -180,11 +181,11 @@
 
   <!--begin::Form group-->
   <div class="fv-row mb-5">
-    <label class="form-label fw-bolder text-dark fs-6">Confirm Password</label>
+    <label class="form-label fw-bolder text-dark fs-6">Confirmar Contraseña</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="password"
-      placeholder="Confirm password"
+      placeholder="Confirmar contraseña"
       name="cPassword"
       autocomplete="off"
       formControlName="cPassword"
@@ -197,7 +198,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Confirm Password is required',
+        message: 'Confirmar Contraseña es requerida',
         control: registrationForm.controls['cPassword']
       }"
     ></ng-container>
@@ -205,7 +206,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minlength',
-        message: 'Confirm Password should have at least 3 symbols',
+        message: 'Confirmar Contraseña debe tener al menos 3 simbolos',
         control: registrationForm.controls['cPassword']
       }"
     ></ng-container>
@@ -213,7 +214,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Confirm Password should have maximum 100 symbols',
+        message: 'Confirmar Contraseña debe tener como maximo 100 simbolos',
         control: registrationForm.controls['cPassword']
       }"
     ></ng-container>
@@ -225,7 +226,7 @@
     >
       <div class="fv-plugins-message-container">
         <div class="fv-help-block">
-          'Passsword' and 'Confirm Password' didn't match.
+          Las Contraseñas no coinciden.
         </div>
       </div>
     </ng-container>
@@ -247,11 +248,11 @@
         for="kt_login_toc_agree"
         class="form-check-label fw-bold text-gray-700 fs-6"
       >
-        I Agree the&nbsp;<a
+        Yo acepto los <a
           href="https://keenthemes.com/metronic/?page=faq"
           target="_blank"
           class="ms-1 link-primary"
-          >terms and conditions</a
+          >terminos y condiciones</a
         >.
       </label>
     </div>
@@ -268,12 +269,12 @@
       "
       class="btn btn-lg btn-primary w-100 mb-5"
     >
-      <ng-container *ngIf="(isLoading$ | async) === false">
-        <span class="indicator-label">Submit</span>
+      <ng-container><!--*ngIf="(isLoading$ | async) === false"-->
+        <span class="indicator-label">Enviar</span>
       </ng-container>
       <ng-container *ngIf="isLoading$ | async">
         <span class="indicator-progress" [style.display]="'block'">
-          Please wait...
+          Por favor espere...
           <span
             class="spinner-border spinner-border-sm align-middle ms-2"
           ></span>
@@ -286,7 +287,7 @@
       id="kt_login_signup_form_cancel_button"
       class="btn btn-lg btn-light-primary w-100 mb-5"
     >
-      Cancel
+      Cancelar
     </a>
   </div>
   <!--end::Form group-->
