--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -42,6 +42,23 @@
   >
 </div>
 
+<div class="menu-item">
+  <a
+    class="menu-link without-sub"
+    routerLink="/crafted/pages/wizards/config-cta"
+    routerLinkActive="active"
+    ><span class="menu-icon">
+      <span
+        [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
+        class="svg-icon svg-icon-2"
+      ></span> </span
+    ><span class="menu-title">ConfigCtaWizzard</span></a
+  >
+</div>
+
+
+
+
 <!-- Layout builder -->
 <!--<div class="menu-item">
   <a
