--- a/src/app/pages/config-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-wizzard/steps/step4/step4.component.html
@@ -1,14 +1,14 @@
 <div class="pb-10 pb-lg-15">
-  <h2 class="fw-bolder text-dark">Billing Details</h2>
-  <div class="text-gray-400 fw-bold fs-6">
+  <h2 class="fw-bolder text-dark">Detalle de Compra</h2>
+  <!-- <div class="text-gray-400 fw-bold fs-6">
     If you need more info, please check out
     <a href="#" class="text-primary fw-bolder">Help Page</a>.
-  </div>
+  </div> -->
 </div>
 <div [formGroup]="form">
   <div class="d-flex flex-column mb-7 fv-row">
     <label class="d-flex align-items-center fs-6 fw-bold form-label mb-2"
-      ><span class="required">Name On Card</span
+      ><span class="required">Nombre en la tarjeta</span
       ><i
         class="fas fa-exclamation-circle ms-2 fs-7"
         ngbTooltip="Specify a card holder's name"
@@ -26,11 +26,11 @@
         form.get('nameOnCard')?.touched
       "
     >
-      Name on card is required
+      Nombre asociado a tarjeta requerido
     </div>
   </div>
   <div class="d-flex flex-column mb-7 fv-row">
-    <label class="required fs-6 fw-bold form-label mb-2">Card Number</label>
+    <label class="required fs-6 fw-bold form-label mb-2">Número de tarjeta</label>
     <div class="position-relative">
       <input
         formControlName="cardNumber"
@@ -45,7 +45,7 @@
           form.get('cardNumber')?.touched
         "
       >
-        Card number is required
+        Número de tarjeta requerido
       </div>
       <div class="position-absolute translate-middle-y top-50 end-0 me-5">
         <img
@@ -67,7 +67,7 @@
   <div class="row mb-10">
     <div class="col-md-8 fv-row">
       <label class="required fs-6 fw-bold form-label mb-2"
-        >Expiration Date</label
+        >Fecha vencimiento</label
       >
       <div class="row fv-row">
         <div class="col-6">
@@ -96,7 +96,7 @@
               form.get('cardExpiryMonth')?.touched
             "
           >
-            Expiration month is required
+            Fecha de vencimiento requerida
           </div>
         </div>
         <div class="col-6">
@@ -124,7 +124,7 @@
               form.get('cardExpiryYear')?.touched
             "
           >
-            Expiration year is required
+            Año de expiración requerido
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
             form.get('cardCvv')?.touched
           "
         >
-          CVV is required
+          CVV es requerido
         </div>
         <div class="position-absolute translate-middle-y top-50 end-0 me-3">
           <span
@@ -167,11 +167,11 @@
   <div class="d-flex flex-stack">
     <div class="me-5">
       <label class="fs-6 fw-bold form-label"
-        >Save Card for further billing?</label
+        >¿Guardar tarjeta para futuras compras?</label
       >
-      <div class="fs-7 fw-bold text-gray-400">
+      <!-- <div class="fs-7 fw-bold text-gray-400">
         If you need more info, please check budget planning
-      </div>
+      </div> -->
     </div>
     <label class="form-check form-switch form-check-custom form-check-solid"
       ><input
@@ -180,7 +180,7 @@
         type="checkbox"
         value="1"
       /><span class="form-check-label fw-bold text-gray-400"
-        >Save Card</span
+        >Guardar tarjeta</span
       ></label
     >
   </div>
