conexion bd configuracion cuenta

--- a/src/app/pages/config-wizzard/steps/step3/step3.component.html
+++ b/src/app/pages/config-wizzard/steps/step3/step3.component.html
@@ -30,7 +30,7 @@
     <select
     name="businessType"
     class="form-select form-select-lg form-select-solid"
-    formControlName="businessType">
+    formControlName="business">
     <option value="1">Sí</option>
     <option value="2">No</option>
     <!-- <option value="2">Sole Proprietorship</option>
