--- a/src/app/pages/config-wizzard/config-cta-wizzard/config-cta-wizzard.html
+++ b/src/app/pages/config-wizzard/config-cta-wizzard/config-cta-wizzard.html
@@ -201,7 +201,7 @@
                   ></span>
                 </ng-container>
                 <ng-container *ngIf="currentStep$.value === formsCount - 1">
-                  Submit
+                  Guardar
                 </ng-container>
               </span>
             </button>
