ajustes campos variables configuracion

--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -52,7 +52,7 @@
         [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
         class="svg-icon svg-icon-2"
       ></span> </span
-    ><span class="menu-title">ConfigCtaWizzard</span></a
+    ><span class="menu-title">Cuenta</span></a
   >
 </div>
 
