--- a/src/app/pages/config-wizzard/steps/step1/step1.component.html
+++ b/src/app/pages/config-wizzard/steps/step1/step1.component.html
@@ -3,7 +3,7 @@
     Elige un tipo de cuenta
     <i
       class="fas fa-exclamation-circle ms-2 fs-7"
-      ngbTooltip="Billing is issued based on your selected account type"
+      ngbTooltip="Selecciona la cuenta que vaya más de acuerdo a tus intereses."
     ></i>
   </h2>
 
@@ -23,7 +23,7 @@
         type="radio"
         class="btn-check"
         id="kt_create_account_form_account_type_personal"
-        value="personal"
+        value="usuario"
       />
       <label
         class="
@@ -57,7 +57,7 @@
         type="radio"
         class="btn-check"
         id="kt_create_account_form_account_type_corporate"
-        value="corporate"
+        value="incubadora"
       />
       <label
         class="
