--- a/src/app/pages/config-wizzard/steps/step2/step2.component.html
+++ b/src/app/pages/config-wizzard/steps/step2/step2.component.html
@@ -109,7 +109,7 @@
     <label class="d-flex align-items-center form-label mb-5"
       >Selecciona un plan<i
         class="fas fa-exclamation-circle ms-2 fs-7"
-        ngbTooltip="Monthly billing will be based on your account plan"
+        ngbTooltip="La facturación mensual se basará en su plan de cuenta"
       ></i
     ></label>
     <div class="mb-0">
@@ -133,7 +133,7 @@
             formControlName="accountPlan"
             class="form-check-input"
             type="radio"
-            value="1" /></span></label
+            value="gratuito" /></span></label
       ><label class="d-flex flex-stack mb-5 cursor-pointer"
         ><span class="d-flex align-items-center me-2"
           ><span class="symbol symbol-50px me-6"
@@ -154,7 +154,7 @@
             formControlName="accountPlan"
             class="form-check-input"
             type="radio"
-            value="2" /></span></label
+            value="pago" /></span></label
       >
       <!-- <label class="d-flex flex-stack mb-0 cursor-pointer"
         ><span class="d-flex align-items-center me-2"
