--- a/src/app/pages/config-wizzard/steps/step3/step3.component.html
+++ b/src/app/pages/config-wizzard/steps/step3/step3.component.html
@@ -31,8 +31,8 @@
     name="businessType"
     class="form-select form-select-lg form-select-solid"
     formControlName="business">
-    <option value="1">Sí</option>
-    <option value="2">No</option>
+    <option value="si">Sí</option>
+    <option value="no">No</option>
     <!-- <option value="2">Sole Proprietorship</option>
     <option value="3">Non-profit</option>
     <option value="4">Limited Liability</option>
@@ -57,8 +57,8 @@
       name="businessType"
       class="form-select form-select-lg form-select-solid"
       formControlName="businessType">
-      <option value="1">Público</option>
-      <option value="2">Privado</option>
+      <option value="publico">Público</option>
+      <option value="privado">Privado</option>
       <!-- <option value="2">Sole Proprietorship</option>
       <option value="3">Non-profit</option>
       <option value="4">Limited Liability</option>
