--- a/src/app/pages/config-wizzard/steps/step5/step5.component.html
+++ b/src/app/pages/config-wizzard/steps/step5/step5.component.html
@@ -1,11 +1,11 @@
 <div class="pb-8 pb-lg-10">
-  <h2 class="fw-bolder text-dark">Your Are Done!</h2>
+  <h2 class="fw-bolder text-dark">Ya has terminado!</h2>
   <div class="text-gray-400 fw-bold fs-6">
-    If you need more info, please
-    <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>.
+    Ya puedes empezar a disfrutar de Mbipi
+    <a routerLink="/dashboard" class="link-primary fw-bolder cursor-pointer"> Ir al Home</a>.
   </div>
 </div>
-<div class="mb-0">
+<!--<div class="mb-0">
   <div class="fs-6 text-gray-600 mb-5">
     Writing headlines for blog posts is as much an art as it is a science and
     probably warrants its own post, but for all advise is with what works for
@@ -32,4 +32,4 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
