configuracion de proyecto wizzard

--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -55,7 +55,19 @@
     ><span class="menu-title">ConfigCtaWizzard</span></a
   >
 </div>
-
+<div class="menu-item">
+  <a
+    class="menu-link without-sub"
+    routerLink="/crafted/pages/wizards/config-project"
+    routerLinkActive="active"
+    ><span class="menu-icon">
+      <span
+        [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
+        class="svg-icon svg-icon-2"
+      ></span> </span
+    ><span class="menu-title">ConfigProject</span></a
+  >
+</div>
 
 
 
