--- a/src/app/pages/config-wizzard/steps/step5/step5.component.html
+++ b/src/app/pages/config-wizzard/steps/step5/step5.component.html
@@ -1,15 +1,13 @@
 <div class="pb-8 pb-lg-10">
-  <h2 class="fw-bolder text-dark">Your Are Done!</h2>
+  <h2 class="fw-bolder text-dark">Has finalizado!</h2>
   <div class="text-gray-400 fw-bold fs-6">
-    If you need more info, please
-    <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>.
+    Ahora podras crear un proyecto y gestionar tu equipo
+    <!-- <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>. -->
   </div>
 </div>
 <div class="mb-0">
   <div class="fs-6 text-gray-600 mb-5">
-    Writing headlines for blog posts is as much an art as it is a science and
-    probably warrants its own post, but for all advise is with what works for
-    your great &amp; amazing audience.
+    Has avanzado a la siguiente fase en la creación de tu prototipo
   </div>
   <div
     class="
@@ -24,10 +22,10 @@
     <span class="svg-icon svg-icon-2tx svg-icon-warning me-4"></span>
     <div class="d-flex flex-stack flex-grow-1">
       <div class="fw-bold">
-        <h4 class="text-gray-800 fw-bolder">We need your attention!</h4>
+        <h4 class="text-gray-800 fw-bolder">Crear Proyecto</h4>
         <div class="fs-6 text-gray-600">
-          To start using great tools, please, please
-          <a class="fw-bolder cursor-pointer"> Create Team Platform</a>
+          Para crear un nuevo proyecto, ingresa a
+          <a class="fw-bolder cursor-pointer"> Crear Proyecto</a>
         </div>
       </div>
     </div>
