--- a/src/app/modules/auth/components/verify/verify.component.html
+++ b/src/app/modules/auth/components/verify/verify.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="fs-5">
         <span class="fw-bold text-gray-700">No recibi un correo electrónico?</span>
-        <button (click)="reenviar()" style="cursor: pointer;" class="link-primary fw-bolder">Reenviar</button>
+        <label (click)="reenviar()" style="cursor: pointer;" class="link-primary fw-bolder"> Reenviar</label>
       </div>
     </div>
   </div>
