vistas creación de proyecto

--- a/src/app/pages/config-project-wizzard/steps/step3/step3.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step3/step3.component.html
@@ -7,7 +7,7 @@
 </div>
 <div [formGroup]="form">
   <div class="fv-row mb-10">
-    <label class="form-label required">Nombre del proyecto</label
+    <label class="form-label required">Invita a los miembros</label
     ><input
       name="businessName"
       class="form-control form-control-lg form-control-solid"
