--- a/src/app/pages/config-project-wizzard/steps/step5/step5.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step5/step5.component.html
@@ -1,17 +1,17 @@
 <div class="pb-8 pb-lg-10">
-  <h2 class="fw-bolder text-dark">Your Are Done!</h2>
+  <h2 class="fw-bolder text-dark">¡Proyecto creado!</h2>
   <div class="text-gray-400 fw-bold fs-6">
-    If you need more info, please
-    <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>.
+    Continua para la visualización de tu dashboard, principales métricas y dar comienzo a la creación de tu prototipo.
+    <!-- <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>. -->
   </div>
 </div>
 <div class="mb-0">
-  <div class="fs-6 text-gray-600 mb-5">
+  <!-- <div class="fs-6 text-gray-600 mb-5">
     Writing headlines for blog posts is as much an art as it is a science and
     probably warrants its own post, but for all advise is with what works for
     your great &amp; amazing audience.
-  </div>
-  <div
+  </div> -->
+  <!-- <div
     class="
       notice
       d-flex
@@ -31,5 +31,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
