--- a/src/app/pages/config-wizzard/steps/step3/step3.component.html
+++ b/src/app/pages/config-wizzard/steps/step3/step3.component.html
@@ -41,8 +41,8 @@
     <div
       class="fv-plugins-message-container invalid-feedback"
       *ngIf="
-        form.get('businessDescriptor')?.hasError('required') &&
-        form.get('businessDescriptor')?.touched
+        form.get('business')?.hasError('required') &&
+        form.get('business')?.touched
       "
     >
       Selecciona una de las opciones disponibles para continuar
@@ -51,7 +51,10 @@
       Customers will see this shortened version of your statement descriptor
     </div> -->
   </div>
-  <div class="fv-row mb-10">
+  <div class="fv-row mb-10" [ngClass]="{
+        invisible: form.get('business')?.value === 'no',
+        visible: form.get('business')?.value === 'si'
+      }">
     <label class="form-label required">Origen del financiamiento</label>
     <select
       name="businessType"
@@ -67,12 +70,24 @@
   </div>
   <div class="fv-row mb-10">
     <label class="form-label">¿Cómo te enteraste de Mbipi?</label
-    ><textarea
+    >
+    <select
+      name="businessDescription"
+      class="form-select form-select-lg form-select-solid"
+      formControlName="businessDescription">
+      <option *ngFor="let r of referencias; let i = index;"  [value]="r.id">{{r.nombre}}</option>
+      <!--<option value="">Seleccione...</option>
+      <option value="2">Sole Proprietorship</option>
+      <option value="3">Non-profit</option>
+      <option value="4">Limited Liability</option>
+      <option value="5">General Partnership</option>-->
+    </select>
+    <!--<textarea
       name="businessDescription"
       class="form-control form-control-lg form-control-solid"
       rows="3"
       formControlName="businessDescription"
-    ></textarea>
+    ></textarea>-->
   </div>
   <!-- <div class="fv-row mb-0">
     <label class="fs-6 fw-bold form-label required">Contact Email</label
