--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -65,7 +65,7 @@
         [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
         class="svg-icon svg-icon-2"
       ></span> </span
-    ><span class="menu-title">ConfigProject</span></a
+    ><span class="menu-title">Crear Proyectos</span></a
   >
 </div>
 
