--- a/src/app/pages/config-project-wizzard/steps/step2/step2.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step2/step2.component.html
@@ -109,7 +109,7 @@
     <label class="d-flex align-items-center form-label mb-5"
       >Selecciona un tipo de proyecto<i
         class="fas fa-exclamation-circle ms-2 fs-7"
-        ngbTooltip="Monthly billing will be based on your account plan"
+        ngbTooltip="Selecciona el que mas haga referencia a tu idea"
       ></i
     ></label>
     <div class="mb-0">
