--- a/src/app/pages/config-project-wizzard/steps/step1/step1.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step1/step1.component.html
@@ -3,7 +3,7 @@
     Tipo de Aplicación
     <i
       class="fas fa-exclamation-circle ms-2 fs-7"
-      ngbTooltip="Billing is issued based on your selected account type"
+      ngbTooltip="Selecciona el tipo de aplicación que quisieras"
     ></i>
   </h2>
 
