validar si usuario tiene proyectos

--- a/src/app/pages/config-wizzard/steps/step5/step5.component.html
+++ b/src/app/pages/config-wizzard/steps/step5/step5.component.html
@@ -2,7 +2,7 @@
   <h2 class="fw-bolder text-dark">Ya has terminado!</h2>
   <div class="text-gray-400 fw-bold fs-6">
     Ya puedes empezar a disfrutar de Mbipi
-    <a routerLink="/dashboard" class="link-primary fw-bolder cursor-pointer"> Ir al Home</a>.
+    <a routerLink="/crafted/pages/wizards/project" class="link-primary fw-bolder cursor-pointer"> Ir al Home</a>.
   </div>
 </div>
 <!--<div class="mb-0">
