--- a/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
@@ -64,9 +64,8 @@
       <div class="fv-row mb-10">
         <label class="form-label">Invita a los miembros</label
         ><input
-          name="businessName"
+          name="invitePersons"
           class="form-control form-control-lg form-control-solid"
-          formControlName="businessName"
         />
         <!-- <div
           class="fv-plugins-message-container invalid-feedback"
