estilo boton agregar correo miembros

--- a/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
@@ -67,7 +67,7 @@
           name="search_members"
           formControlName="search_members"
           class="form-control form-control-lg form-control-solid"
-        /><a (click)="add()" style="cursor: pointer;">Agregar</a>
+        /><a (click)="add()" class="btn btn-lg btn-primary me-3" style="cursor: pointer;">Agregar</a>
         <input
           name="members"
           formControlName="members"
