--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -17,6 +17,21 @@
 <div class="menu-item">
   <a
     class="menu-link without-sub"
+    routerLink="/dashboard-project"
+    routerLinkActive="active"
+    ><span class="menu-icon">
+      <span
+        [inlineSVG]="'./assets/media/icons/duotune/art/art002.svg'"
+        class="svg-icon svg-icon-2"
+      ></span>
+    </span>
+    <span class="menu-title">Dashboard2</span
+  ></a>
+</div>
+
+<div class="menu-item">
+  <a
+    class="menu-link without-sub"
     routerLink="/users"
     routerLinkActive="active"
     ><span class="menu-icon">
