--- a/src/app/pages/config-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-wizzard/steps/step4/step4.component.html
@@ -73,7 +73,7 @@
         <div class="col-6">
           <select
             formControlName="cardExpiryMonth"
-            class="form-select form-select-solid"
+            class="form-select form-select-solid" data-control="select2" data-placeholder="Select..." data-allow-clear="true" data-hide-search="true"
           >
             <option></option>
             <option value="1">1</option>
@@ -102,7 +102,7 @@
         <div class="col-6">
           <select
             formControlName="cardExpiryYear"
-            class="form-select form-select-solid"
+            class="form-select form-select-solid" data-control="select2" data-placeholder="Select..." data-allow-clear="true" data-hide-search="true"
           >
             <option></option>
             <option value="2021">2021</option>
