--- a/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
+++ b/src/app/pages/config-project-wizzard/steps/step4/step4.component.html
@@ -63,17 +63,25 @@
     <div [formGroup]="form">
       <div class="fv-row mb-10">
         <label class="form-label">Invita a los miembros</label
-        ><input
+        ><!--<input
           name="search_members"
           formControlName="search_members"
           class="form-control form-control-lg form-control-solid"
         /><a (click)="add()" class="btn btn-lg btn-primary me-3" style="cursor: pointer;">Agregar</a>
-        <input
+        --><input
           name="members"
           formControlName="members"
           type="hidden"
           class="form-control form-control-lg form-control-solid"
         />
+        <div class="d-flex">
+          <input name="search_members"
+          formControlName="search_members"
+          type="text" class="form-control form-control-solid me-3 flex-grow-1"
+          value=""/>
+  
+          <a (click)="add()" class="btn btn-primary fw-bold flex-shrink-0">Agregar</a>
+      </div>
         <!-- <div
           class="fv-plugins-message-container invalid-feedback"
           *ngIf="
