email invitaciones e interfaz invitaciones

--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -23,6 +23,11 @@
   <div class="separator my-2"></div>
 
   <div class="menu-item px-5">
+    <a routerLink="/invitations" class="menu-link px-5">
+      Invitaciones
+    </a>
+  </div>
+  <div class="menu-item px-5">
     <a routerLink="/crafted/pages/wizards/config-cta" class="menu-link px-5">
       Cambiar Cuenta
     </a>
