ajuste controlador y estado proyecto

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -212,7 +212,7 @@
         <!--end::Car Title-->
         <!--begin::Card toolbar-->
         <div class="card-toolbar">
-          <span class="badge badge-light-primary fw-bold me-auto px-4 py-3">In Progress</span>
+          <span class="badge badge-light-primary fw-bold me-auto px-4 py-3">{{proyecto.estado}}</span>
         </div>
         <!--end::Card toolbar-->
       </div>
