--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -16,7 +16,7 @@
             <!--begin::Status-->
             <div class="d-flex align-items-center mb-1">
               <a href="#" class="text-gray-800 text-hover-primary fs-2 fw-bold me-3">{{proyecto.nombre}}</a>
-              <span class="badge badge-light-success me-auto">In Progress</span>
+              <span class="badge badge-light-success me-auto">{{proyecto.estado}}</span>
             </div>
             <!--end::Status-->
             <!--begin::Description-->
