ajustes permisos menu

--- a/src/app/pages/invitations/invitations.component.html
+++ b/src/app/pages/invitations/invitations.component.html
@@ -15,6 +15,10 @@
           <p class="text-gray-400 fs-4 fw-bold py-7" *ngIf="invitaciones.length > 0">¡Tienes invitaciones pendientes!<br> Por favor acepta si quieres participar en el proyecto o rechaza la invitación</p>
           <p class="text-gray-400 fs-4 fw-bold py-7" *ngIf="invitaciones.length < 1">No posee ninguna invitación pendiente</p>
           <!--end::Description-->
+
+          <div style="margin-bottom: 10px;" *ngIf="invitaciones.length < 1">
+            <a class="btn btn-lg btn-primary" data-bs-toggle="tooltip" title="Dashboard" routerLink="/dashboard">Dashboard</a>
+          </div>
           
           <ng-container *ngFor="let inv of filteredInvitaciones | async; let i = index;">
           <!--begin::Action-->
