descripcion del proyecto

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -223,7 +223,7 @@
         <div class="fs-3 fw-bold text-dark">{{proyecto.equipos_equipo.equipo_proyecto[0].nombre}}</div>
         <!--end::Name-->
         <!--begin::Description-->
-        <p class="text-gray-400 fw-semibold fs-5 mt-1 mb-7">CRM App application to HR efficiency</p>
+        <p class="text-gray-400 fw-semibold fs-5 mt-1 mb-7">{{proyecto.equipos_equipo.equipo_proyecto[0].descripcion}}</p>
         <!--end::Description-->
         <!--begin::Info-->
         <div class="d-flex flex-wrap mb-5">
