--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -20,7 +20,7 @@
             </div>
             <!--end::Status-->
             <!--begin::Description-->
-            <div class="d-flex flex-wrap fw-semibold mb-4 fs-5 text-gray-400">#1 Tool to get started with Web Apps any Kind &amp; size</div>
+            <div class="d-flex flex-wrap fw-semibold mb-4 fs-5 text-gray-400">{{proyecto.descripcion}}</div>
             <!--end::Description-->
           </div>
           <!--end::Details-->
