ajuste estados de proyectos

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -45,21 +45,21 @@
             <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
               <div class="bullet bg-primary me-3"></div>
               <div class="text-gray-400">Activos</div>
-              <div class="ms-auto fw-bold text-gray-700">0</div>
+              <div class="ms-auto fw-bold text-gray-700">{{iniciadoLength}}</div>
             </div>
             <!--end::Label-->
             <!--begin::Label-->
             <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
               <div class="bullet bg-success me-3"></div>
               <div class="text-gray-400">Completados</div>
-              <div class="ms-auto fw-bold text-gray-700">0</div>
+              <div class="ms-auto fw-bold text-gray-700">{{completadoLength}}</div>
             </div>
             <!--end::Label-->
             <!--begin::Label-->
             <div class="d-flex fs-6 fw-semibold align-items-center">
               <div class="bullet bg-gray-300 me-3"></div>
               <div class="text-gray-400">Sin iniciar</div>
-              <div class="ms-auto fw-bold text-gray-700">1</div>
+              <div class="ms-auto fw-bold text-gray-700">{{sinIniciarLength}}</div>
             </div>
             <!--end::Label-->
           </div>
