ajustes todos los miembros

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -128,11 +128,13 @@
         <div class="fs-4 fw-semibold text-gray-400 mb-7">Miembros del equipo</div>
         <!--end::Heading-->
         <!--begin::Users group-->
+        <div class="symbol-group symbol-hover mb-9">
         <ng-container *ngFor="let usu of correoMiembrosEquipoList; let u = index;">
-          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu != null ? usu : usuario}}">
+          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu != null ? usu : usuario.correo_login}}">
             <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu != null ? usu.substring(0, 1).toUpperCase() : 'Yo')}}</span>
           </div>
         </ng-container>
+        </div>
         <!-- <div class="symbol-group symbol-hover mb-9">
           <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="Alan Warden">
             <span class="symbol-label bg-warning text-inverse-warning fw-bold">A</span>
