--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -125,7 +125,7 @@
       <div class="card-body p-9">
         <!--begin::Heading-->
         <div class="fs-2hx fw-bold">{{num_equipos}}</div>
-        <div class="fs-4 fw-semibold text-gray-400 mb-7">Miembros del equipo</div>
+        <div class="fs-4 fw-semibold text-gray-400 mb-7">Miembros de los equipos</div>
         <!--end::Heading-->
         <!--begin::Users group-->
         <div class="symbol-group symbol-hover mb-9">
